Uses smaller splash image.

--- a/fluidautomata.html
+++ b/fluidautomata.html
@@ -46,7 +46,7 @@
 <input id="myInput" type="file" style="visibility:hidden" onchange="handleFiles(this.files)" />
 
 
-<img id="splash" src="images/splash.png" style="  position: absolute;
+<img id="splash" src="images/splash.jpg" style="  position: absolute;
     top: 0%;
     left: 0%;
     width:100%;
