--- a/fluidautomata.html
+++ b/fluidautomata.html
@@ -2,55 +2,73 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>FluidAutomata</title>
+<title>FluidAutomata</title>
 <meta charset="UTF-8">
-  <canvas id="canvas"></canvas>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+<meta name="HandheldFriendly" content="true" />
+
+<canvas id="canvas"></canvas>
 
 
-	<script src="libs/three.js"></script>
-  <script src="libs/dat.gui.js"></script>
-  <script src="libs/stats.js"></script>
+<script src="libs/three.js"></script>
+<script src="libs/dat.gui.js"></script>
+<script src="libs/stats.js"></script>
 
-	<script src="js/preset.js" defer></script>
-	<script src="js/palette.js" defer></script>
-	<script src="js/fluidautomata.js" defer></script>
-  <!--	<script src="interaction.js"></script> -->
-  
-  </head>
+<script src="js/preset.js" defer></script>
+<script src="js/palette.js" defer></script>
+<script src="js/fluidautomata.js" defer></script>
+<!--	<script src="interaction.js"></script> -->
 
-  <body onkeypress="keypress(event)">
-  <div id="Stats-output">
+</head>
+
+<body ontouchmove="blockMove()" onkeypress="keypress(event)" >
+
+<!--
+<div id="Stats-output">
 </div>
- 
+-->
 
 
 
-  <style media="screen" type="text/css">
-  html, body, #canvas{
-                      margin: 0;
-                      padding: 0;
-                      width: 100%;
-                      height: 100%;
-                      display: block;
-  }
+<style media="screen" type="text/css">
+html {
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+   -webkit-text-size-adjust: 100%;
 
-  a{
-    font-family:helvetica,arial;
+}
+
+body, #canvas{
+  overflow: auto;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+   -webkit-text-size-adjust: 100%;
+
+
+}
+
+a{
+  font-family:helvetica,arial;
   font-size:20px;
   color:white;
 
 
-  }
-  </style>
+}
+</style>
 
 <input id="myInput" type="file" style="visibility:hidden" onchange="handleFiles(this.files)" />
 
 
 <img id="splash" src="images/splash.jpg" style="  position: absolute;
-    top: 0%;
-    left: 0%;
-    width:100%;
-    height:100%;
+top: 0%;
+left: 0%;
+width:100%;
+height:100%;
 ">
 
 
@@ -63,54 +81,54 @@ position:absolute;z-index:100;left:10px;top:10px;max-width:600px;margin:10px;pad
   font-size:60px;
   color:white;" onclick="console.log('here!'); isOverControls = false; removeSplash();"
   > 
-fluidautomata.js
+  fluidautomata.js
 </a>
 <br>
 <br>&nbsp;<br>
 <a>
-  
-  
+
+
   Code for this project is freely available at: <br><a href="https://github.com/CreativeCodingLab/FluidAutomataJS">github.com/CreativeCodingLab/FluidAutomataJS</a><a>.</a>
+  <br>&nbsp;<br>
+
+  <a>
+    Details of the system are described in this paper:
+
     <br>&nbsp;<br>
 
-   <a>
-   Details of the system are described in this paper:
-   
-    <br>&nbsp;<br>
-
-  A. G. Forbes, T. Hollerer, and G. Legrady.</a> <a href="http://creativecoding.evl.uic.edu/pdfs/Forbes_GenerativeFluidProfiles_CAe2013.pdf">Generative fluid profiles for interactive media arts projects</a><a>. Proc. ACM/Eurographics International Symposium on Computational Aesthetics in Graphics, Visualization, and Imaging (CAe), pages 37-43, 2013.
+    A. G. Forbes, T. Hollerer, and G. Legrady.</a> <a href="http://creativecoding.evl.uic.edu/pdfs/Forbes_GenerativeFluidProfiles_CAe2013.pdf">Generative fluid profiles for interactive media arts projects</a><a>. Proc. ACM/Eurographics International Symposium on Computational Aesthetics in Graphics, Visualization, and Imaging (CAe), pages 37-43, 2013.
   </a>
-    <br>&nbsp;<br>
+  <br>&nbsp;<br>
 
-    <a style="font-family:helvetica,arial;font-size:20px;color:white;width:200px">
+  <a style="font-family:helvetica,arial;font-size:20px;color:white;width:200px">
 
     Angus Forbes<br>
     <a href="http://creativecoding.evl.uic.edu">creativecoding.evl.uic.edu</a>
- </a>
- <br>&nbsp;<br>
+  </a>
+  <br>&nbsp;<br>
 
-</p>
+  </p>
 
 
 
-  <!-- draw on FBO texture -->
-  <script id="vertex-shader" type="x-shader/x-vertex">
-    varying vec2 vUv;
+    <!-- draw on FBO texture -->
+    <script id="vertex-shader" type="x-shader/x-vertex">
+varying vec2 vUv;
     void main() {
       gl_Position = vec4(position, 1.0);
     }
-  </script>
+    </script>
 
-  <script id="fragment-shader" type="x-shader/x-fragment">
-    uniform vec4 myColor;
+    <script id="fragment-shader" type="x-shader/x-fragment">
+uniform vec4 myColor;
     varying vec2 vUv;
     void main() {
       gl_FragColor = vec4(myColor.rgb, 1.0);
     }
-  </script>
+    </script>
 
- <!-- draw on FBO texture pp -->
-  <script id="vertex-shader_pp" type="x-shader/x-vertex">
+    <!-- draw on FBO texture pp -->
+    <script id="vertex-shader_pp" type="x-shader/x-vertex">
   precision mediump float;
       precision mediump int;
 
